Fixed spacing on container

--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,6 @@ cite {
   vertical-align: middle;
   width: 250px;
   height: 250px;
-  border-radius: 50%;
   padding: 10px;
 }
 
